UC-25 completion. Brings full system wide changes effecting every most systems in the project. Highly prone to breaking. Implements Log in system